--- a/ublox_gps/config/c94_m8p_rover.yaml
+++ b/ublox_gps/config/c94_m8p_rover.yaml
@@ -7,16 +7,15 @@ save:
                             # Manager, Antenna, and Logging Configuration
   device: 4                 # Save to EEPROM
 
-device: /dev/ttyACM1
+device: /dev/ublox_rtk
 frame_id: gps
 rate: 4                     # in Hz
 nav_rate: 4                 # [# of measurement cycles], recommended 1 Hz, may 
                             # be either 5 Hz (Dual constellation) or 
                             # 8 Hz (GPS only)
-dynamic_model: airborne2    # Airborne < 2G, 2D fix not supported (3D only), 
-                            # Max Alt: 50km
-                            # Max Horizontal Velocity: 250 m/s, 
-                            # Max Vertical Velocity: 100 m/s
+dynamic_model: pedestrian   # Possible values: portable (default), stationary,
+                            # pedestrian, automotive, sea, airborne1 (max acc = 1G),
+                            # airborne2 (max acc = 2G), airborne4 (max acc = 4G), wristwatch
 fix_mode: auto
 enable_ppp: false           # Not supported by C94-M8P
 dr_limit: 0
