--- a/ublox_gps/CMakeLists.txt
+++ b/ublox_gps/CMakeLists.txt
@@ -59,3 +59,10 @@ install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   PATTERN ".svn" EXCLUDE
 )
+
+install(DIRECTORY
+        config
+        launch
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+    PATTERN ".svn" EXCLUDE
+)
